* Mon Mar 29 2021 Matiss Treinis <matiss@hub256.com> - 0.1.5
- Fix compatibility issues with imports
- Load specs and facts with no role target as global

* Sat Mar 27 2021 Matiss Treinis <matiss@hub256.com> - 0.1.4
- Add ability to scope entire spec modules to certain roles, path bugfix

* Sat Mar 27 2021 Matiss Treinis <matiss@hub256.com> - 0.1.3
- Bugfixes

* Sat Mar 27 2021 Matiss Treinis <matiss@hub256.com> - 0.1.2
- Add host load average read API

* Sat Mar 20 2021 Matiss Treinis <matiss@hub256.com> - 0.1.1
- Add ability to read target roles from file

* Sat Mar 20 2021 Matiss Treinis <matiss@hub256.com> - 0.1.0
- Initial release