@@ -1,3 +1,6 @@
+* Mon Mar 29 2021 Matiss Treinis <matiss@hub256.com> - 0.1.6
+- Prevent __pycache__ from being generated in spec folders
+
 * Mon Mar 29 2021 Matiss Treinis <matiss@hub256.com> - 0.1.5
 - Fix compatibility issues with imports
 - Load specs and facts with no role target as global
